获取源数据接口定义和部位实现
